-------------------------------------------------------------------------------------------------------
Release notes version 1.8.1_beta : Enhancements, modifications and corrected bugs since version 1.8.0 :
-------------------------------------------------------------------------------------------------------
05/12/19 (TRUST)  New feature : Add possibility to post-process Y_PLUS on moving boundaries in VEF discretization 
04/12/19 (TRUST)  Portability : Add the possibility to configure a baltik in 64 bit indices mode (experimental)
27/11/19 (TRUST)  Portability : orcus (DM2S) and plafrim (INRIA) clusters supported
--------------------------------------------------------------------------------------------------
Release notes version 1.8.0 : Enhancements, modifications and corrected bugs since version 1.7.9 :
--------------------------------------------------------------------------------------------------
31/10/19 (TRUST)  New feature : First version of a Python module (SWIG) for the ICoCo interface.
30/10/19 (TRUST)  New feature : PISO scheme now working with PolyMAC.
30/10/19 (TRUST)  Bug fixed   : Several bug fixes for polyhedrons and PolyMAC discretisation. 
30/10/19 (TRUST)  New feature : Time scheme: dt_max argument can now be a function of time (expression is parsed)
25/10/19 (TRUST)  Major change: Turbulence features (turbulent problems, wall laws, turbulence models and associated boundary conditions) are moved from TRUST to TrioCFD baltik.
21/10/19 (TRUST)  New feature : Face fields (e.g. temperature/velocity in VEF, velocity in VDF) may be written in MED files (may be visualized by Paraview not VisIt yet) 
17/10/19 (TRUST)  New feature : Champ_Fonc_Fonction now supports multi-components. 
17/10/19 (TRUST)  New keyword : Champ_Tabule_Morceaux: tabulated field defined per sub-zone 
16/10/19 (TRUST)  Portability : Add -with-64-bit-indices configure option in order to build TRUST with 64 bits integers 